--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Kerollmops <renault.cle@gmail.com>"]
 
 [dependencies]
+bincode = "1.0"
 env_logger = { version = "0.3", default-features = false }
 fst = "0.3"
 futures = "0.1"
@@ -13,5 +14,5 @@ tokio-service = "0.1"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
-smallvec = "0.6"
+smallvec = { version = "0.6", features = ["serde"] }
 url = "1.7"
