--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ env_logger = { version = "0.3", default-features = false }
 fst = "0.3"
 fst-levenshtein = "0.2"
 futures = "0.1"
+lazy_static = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
