--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp.git" }
 tokio-proto = "0.1"
 tokio-service = "0.1"
 url = "1.7"
+
+[profile.release]
+lto = true
