--- a/raptor-indexer/Cargo.toml
+++ b/raptor-indexer/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "raptor-bin"
+name = "raptor-indexer"
 version = "0.1.0"
 authors = ["Kerollmops <renault.cle@gmail.com>"]
 
@@ -8,6 +8,8 @@ raptor = { path = ".." }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+unidecode = "0.3"
 
 [profile.release]
-# lto = true
+debug = true
+lto = true
