--- a/raptor-search/Cargo.toml
+++ b/raptor-search/Cargo.toml
@@ -14,6 +14,9 @@ elapsed = "0.1"
 git = "https://github.com/Kerollmops/fst.git"
 branch = "op-builder-with-state"
 
+[dependencies.rocksdb]
+git = "https://github.com/pingcap/rust-rocksdb.git"
+
 [profile.release]
 lto = true
 debug = true
