--- a/raptor-indexer/Cargo.toml
+++ b/raptor-indexer/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Kerollmops <renault.cle@gmail.com>"]
 
 [dependencies]
-raptor = { path = ".." }
+raptor = { path = "../raptor" }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
@@ -12,7 +12,3 @@ unidecode = "0.3"
 
 [dependencies.rocksdb]
 git = "https://github.com/pingcap/rust-rocksdb.git"
-
-[profile.release]
-debug = true
-lto = true
