feat: Introduce sst file dumping
Fixes #9

--- a/raptor-indexer/Cargo.toml
+++ b/raptor-indexer/Cargo.toml
@@ -9,6 +9,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 unidecode = "0.3"
+moby-name-gen = "0.1"
 
 [dependencies.rocksdb]
 git = "https://github.com/pingcap/rust-rocksdb.git"
