--- a/raptor-search/Cargo.toml
+++ b/raptor-search/Cargo.toml
@@ -9,7 +9,7 @@ elapsed = "0.1"
 
 [dependencies.fst]
 git = "https://github.com/Kerollmops/fst.git"
-branch = "op-builder-with-state"
+branch = "always-match-clone"
 
 [dependencies.rocksdb]
 git = "https://github.com/pingcap/rust-rocksdb.git"
