chore: Make the repo use examples and keep the library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,37 +1,37 @@
 [package]
 edition = "2018"
-name = "raptor-cli"
+name = "raptor"
 version = "0.1.0"
-authors = ["Clément Renault <renault.cle@gmail.com>"]
+authors = ["Kerollmops <renault.cle@gmail.com>"]
 
 [dependencies]
-raptor = { path = "raptor" }
-rocksdb = { git = "https://github.com/pingcap/rust-rocksdb.git" }
-serde_derive = "1.0"
-structopt = "0.2"
-serde = "1.0"
-warp = { version = "0.1", optional = true }
-serde_json = { version = "1.0", optional = true }
-csv = { version = "1.0", optional = true }
-moby-name-gen = { version = "0.1", optional = true }
-unidecode = { version = "0.3", optional = true }
-elapsed = { version = "0.1", optional = true }
+byteorder = "1.2"
+lazy_static = "1.1"
+sdset = "0.2"
+fnv = "1.0"
 
 [dependencies.fst]
 git = "https://github.com/Kerollmops/fst.git"
 branch = "automaton-for-deref"
 
-[features]
-default = ["index-csv", "serve-http"]
+[dependencies.levenshtein_automata]
+git = "https://github.com/Kerollmops/levenshtein-automata.git"
+branch = "new-custom-fst"
+features = ["fst_automaton"]
 
-index-jsonlines = ["index", "serde_json"]
-index-csv = ["index", "csv"]
-index = ["moby-name-gen", "unidecode"]
+[dependencies.rocksdb]
+git = "https://github.com/pingcap/rust-rocksdb.git"
 
-serve-http = ["serve", "warp", "serde_json"]
-serve-console = ["serve", "elapsed"]
-serve = []
+[dependencies.group-by]
+git = "https://github.com/Kerollmops/group-by.git"
 
-[profile.release]
-lto = true
-debug = true
+[dev-dependencies]
+moby-name-gen = "0.1"
+serde_derive = "1.0"
+serde_json = "1.0"
+structopt = "0.2"
+unidecode = "0.3"
+elapsed = "0.1"
+serde = "1.0"
+warp = "0.1"
+csv = "1.0"
