chore: Rename the library "pentium" 🎉

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2018"
-name = "raptor"
+name = "pentium"
 version = "0.1.0"
 authors = ["Kerollmops <renault.cle@gmail.com>"]
 
