feat: Introduce a working key-value based database

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ sdset = "0.2"
 serde = "1.0"
 serde_derive = "1.0"
 unidecode = "0.3"
+uuid = { version = "0.7", features = ["serde", "v4"] }
 
 [dependencies.fst]
 git = "https://github.com/Kerollmops/fst.git"
