feat: Add the "i128" feature flag to allow some i128 support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ git = "https://github.com/Kerollmops/group-by.git"
 
 [features]
 default = []
+i128 = ["bincode/i128", "byteorder/i128"]
 sse = ["rocksdb/sse"]
 
 [dev-dependencies]
