--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2018"
-name = "meili-core"
+name = "meilidb"
 version = "0.1.0"
 authors = ["Kerollmops <renault.cle@gmail.com>"]
 
