--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,28 +7,23 @@ authors = ["Kerollmops <renault.cle@gmail.com>"]
 [dependencies]
 bincode = "1.0"
 byteorder = "1.2"
+fst = "0.3"
 hashbrown = "0.1"
 lazy_static = "1.1"
+levenshtein_automata = { version = "0.1", features = ["fst_automaton"] }
 linked-hash-map = { version = "0.5", features = ["serde_impl"] }
 sdset = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
 unidecode = "0.3"
 
-[dependencies.fst]
-git = "https://github.com/Kerollmops/fst.git"
-branch = "automaton-for-deref"
-
-[dependencies.levenshtein_automata]
-git = "https://github.com/Kerollmops/levenshtein-automata.git"
-branch = "new-custom-fst"
-features = ["fst_automaton"]
-
 [dependencies.rocksdb]
 git = "https://github.com/pingcap/rust-rocksdb.git"
+rev = "c2eb140"
 
 [dependencies.group-by]
 git = "https://github.com/Kerollmops/group-by.git"
+rev = "cab857b"
 
 [features]
 default = ["simd"]
