--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Kerollmops <renault.cle@gmail.com>"]
 [dependencies]
 bincode = "1.0"
 byteorder = "1.2"
+crossbeam = "0.6"
 fst = "0.3"
 hashbrown = "0.1"
 lazy_static = "1.1"
