--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,8 @@ nightly = []
 csv = "1.0"
 elapsed = "0.1"
 quickcheck = "0.7"
+rand = "0.6"
+rand_xorshift = "0.1"
 structopt = "0.2"
 tempfile = "3.0"
 termcolor = "1.0"
