--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,9 +41,13 @@ nightly = ["hashbrown/nightly", "group-by/nightly"]
 [dev-dependencies]
 csv = "1.0"
 elapsed = "0.1"
+jemallocator = "0.1"
 quickcheck = "0.7"
 rand = "0.6"
 rand_xorshift = "0.1"
 structopt = "0.2"
 tempfile = "3.0"
 termcolor = "1.0"
+
+[profile.release]
+debug = true
