feat: Make the Database handle multiple index using column-families

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ authors = ["Kerollmops <renault.cle@gmail.com>"]
 [dependencies]
 bincode = "1.0"
 byteorder = "1.2"
-crossbeam = "0.6"
 fst = "0.3"
 hashbrown = { version = "0.1", features = ["serde"] }
 lazy_static = "1.1"
@@ -25,12 +24,16 @@ features = ["preserve_order"]
 rev = "0372ba6"
 
 [dependencies.rocksdb]
-git = "https://github.com/pingcap/rust-rocksdb.git"
-rev = "306e201"
+git = "https://github.com/Kerollmops/rust-rocksdb.git"
+rev = "3144b67"
 
 [dependencies.group-by]
 git = "https://github.com/Kerollmops/group-by.git"
 rev = "f1f5d8f"
+
+[dependencies.chashmap]
+git = "https://gitlab.redox-os.org/redox-os/tfs.git"
+rev = "b3e7cae1"
 
 [features]
 default = ["simd"]
