--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ sdset = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = { version = "1.0", features = ["preserve_order"] }
-slice-group-by = "0.2"
+slice-group-by = "0.2.3-alpha"
 unidecode = "0.3"
 rayon = "1.0"
 lockfree = "0.5.1"
