--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,27 +5,24 @@ version = "0.3.1"
 authors = ["Kerollmops <renault.cle@gmail.com>"]
 
 [dependencies]
-arc-swap = "0.3"
-bincode = "1.0"
-byteorder = "1.2"
-fst = "0.3"
-hashbrown = { version = "0.1", features = ["serde"] }
-lazy_static = "1.1"
-levenshtein_automata = { version = "0.1", features = ["fst_automaton"] }
-linked-hash-map = { version = "0.5", features = ["serde_impl"] }
-lockfree = "0.5"
-log = "0.4"
-rayon = "1.0"
-sdset = "0.3"
-serde = "1.0"
-serde_derive = "1.0"
-serde_json = { version = "1.0", features = ["preserve_order"] }
-size_format = "1.0"
-unidecode = "0.3"
-
-[dependencies.slice-group-by]
-git = "https://github.com/Kerollmops/slice-group-by.git"
-tag = "v0.2.3-alpha.1"
+arc-swap = "0.3.7"
+bincode = "1.1.2"
+byteorder = "1.3.1"
+fst = "0.3.3"
+hashbrown = { version = "0.1.8", features = ["serde"] }
+lazy_static = "1.2.0"
+levenshtein_automata = { version = "0.1.1", features = ["fst_automaton"] }
+linked-hash-map = { version = "0.5.1", features = ["serde_impl"] }
+lockfree = "0.5.1"
+log = "0.4.6"
+rayon = "1.0.3"
+sdset = "0.3.1"
+serde = "1.0.88"
+serde_derive = "1.0.88"
+serde_json = { version = "1.0.38", features = ["preserve_order"] }
+size_format = "1.0.2"
+slice-group-by = "0.2.4"
+unidecode = "0.3.0"
 
 [dependencies.toml]
 git = "https://github.com/Kerollmops/toml-rs.git"
@@ -44,15 +41,15 @@ simd = ["rocksdb/sse"]
 nightly = ["hashbrown/nightly", "slice-group-by/nightly"]
 
 [dev-dependencies]
-csv = "1.0"
-env_logger = "0.6"
-jemallocator = "0.1"
-quickcheck = "0.8"
-rand = "0.6"
-rand_xorshift = "0.1"
-structopt = "0.2"
-tempfile = "3.0"
-termcolor = "1.0"
+csv = "1.0.5"
+env_logger = "0.6.0"
+jemallocator = "0.1.9"
+quickcheck = "0.8.2"
+rand = "0.6.5"
+rand_xorshift = "0.1.1"
+structopt = "0.2.14"
+tempfile = "3.0.7"
+termcolor = "1.0.4"
 
 [profile.release]
 debug = true
