chore: Allow the activation of the meilidb-core i128 feature

--- a/meilidb/Cargo.toml
+++ b/meilidb/Cargo.toml
@@ -33,7 +33,7 @@ rev = "306e201"
 
 [features]
 default = ["simd"]
-i128 = ["bincode/i128"]
+i128 = ["bincode/i128", "meilidb-core/i128"]
 portable = ["rocksdb/portable"]
 simd = ["rocksdb/sse"]
 nightly = ["hashbrown/nightly", "slice-group-by/nightly"]
