--- a/meilidb/Cargo.toml
+++ b/meilidb/Cargo.toml
@@ -5,39 +5,13 @@ version = "0.3.1"
 authors = ["Kerollmops <renault.cle@gmail.com>"]
 
 [dependencies]
-arc-swap = "0.3.7"
-bincode = "1.1.2"
-byteorder = "1.3.1"
-fst = "0.3.3"
-hashbrown = { version = "0.1.8", features = ["serde"] }
-linked-hash-map = { version = "0.5.1", features = ["serde_impl"] }
-lockfree = "0.5.1"
-log = "0.4.6"
 meilidb-core = { path = "../meilidb-core", version = "0.1.0" }
 meilidb-tokenizer = { path = "../meilidb-tokenizer", version = "0.1.0" }
-sdset = "0.3.1"
-serde = "1.0.88"
-serde_derive = "1.0.88"
-serde_json = { version = "1.0.38", features = ["preserve_order"] }
-size_format = "1.0.2"
-slice-group-by = "0.2.4"
-toml = { version = "0.5.0", features = ["preserve_order"] }
-unidecode = "0.3.0"
-
-[dependencies.rocksdb]
-git = "https://github.com/pingcap/rust-rocksdb.git"
-rev = "306e201"
 
 [features]
-default = ["simd"]
-i128 = ["bincode/i128", "meilidb-core/i128"]
-portable = ["rocksdb/portable"]
-simd = ["rocksdb/sse"]
-nightly = [
-    "hashbrown/nightly",
-    "slice-group-by/nightly",
-    "meilidb-core/nightly"
-]
+default = []
+i128 = ["meilidb-core/i128"]
+nightly = ["meilidb-core/nightly"]
 
 [dev-dependencies]
 csv = "1.0.5"
