--- a/meilidb-core/Cargo.toml
+++ b/meilidb-core/Cargo.toml
@@ -14,8 +14,7 @@ log = "0.4.6"
 meilidb-tokenizer = { path = "../meilidb-tokenizer", version = "0.1.0" }
 rayon = "1.0.3"
 sdset = "0.3.1"
-serde = "1.0.88"
-serde_derive = "1.0.88"
+serde = { version = "1.0.88", features = ["derive"] }
 slice-group-by = "0.2.4"
 
 [features]
