--- a/meilidb-data/Cargo.toml
+++ b/meilidb-data/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 bincode = "1.1.2"
 linked-hash-map = { version = "0.5.2", features = ["serde_impl"] }
 meilidb-core = { path = "../meilidb-core", version = "0.1.0" }
+ordered-float = { version = "1.0.2", features = ["serde"] }
 serde = { version = "1.0.88", features = ["derive"] }
 serde_json = { version = "1.0.39", features = ["preserve_order"] }
 sled = "0.20.0"
