--- a/meilidb-core/Cargo.toml
+++ b/meilidb-core/Cargo.toml
@@ -6,16 +6,23 @@ edition = "2018"
 
 [dependencies]
 byteorder = "1.3.1"
-fst = "0.3.3"
 hashbrown = "0.1.8"
 lazy_static = "1.2.0"
-levenshtein_automata = { version = "0.1.1", features = ["fst_automaton"] }
 log = "0.4.6"
 meilidb-tokenizer = { path = "../meilidb-tokenizer", version = "0.1.0" }
 rayon = "1.0.3"
 sdset = "0.3.1"
 serde = { version = "1.0.88", features = ["derive"] }
 slice-group-by = "0.2.4"
+
+[dependencies.fst]
+git = "https://github.com/Kerollmops/fst.git"
+branch = "arc-byte-slice"
+
+[dependencies.levenshtein_automata]
+git = "https://github.com/Kerollmops/levenshtein-automata.git"
+branch = "arc-byte-slice"
+features = ["fst_automaton"]
 
 [features]
 i128 = ["byteorder/i128"]
