--- a/meilidb/Cargo.toml
+++ b/meilidb/Cargo.toml
@@ -15,12 +15,13 @@ i128 = ["meilidb-core/i128"]
 nightly = ["meilidb-core/nightly"]
 
 [dev-dependencies]
-csv = "1.0.5"
-env_logger = "0.6.0"
+csv = "1.0.7"
+env_logger = "0.6.1"
 jemallocator = "0.1.9"
 quickcheck = "0.8.2"
 rand = "0.6.5"
 rand_xorshift = "0.1.1"
-structopt = "0.2.14"
+serde = { version = "1.0.90", features = ["derive"] }
+structopt = "0.2.15"
 tempfile = "3.0.7"
 termcolor = "1.0.4"
