--- a/meilidb/Cargo.toml
+++ b/meilidb/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Kerollmops <renault.cle@gmail.com>"]
 [dependencies]
 meilidb-core = { path = "../meilidb-core", version = "0.1.0" }
 meilidb-data = { path = "../meilidb-data", version = "0.1.0" }
+meilidb-schema = { path = "../meilidb-schema", version = "0.1.0" }
 serde = { version = "1.0.91" , features = ["derive"] }
 serde_json = "1.0.39"
 tempfile = "3.0.7"
