--- a/meilidb-schema/Cargo.toml
+++ b/meilidb-schema/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Kerollmops <renault.cle@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+arc-swap = "0.3.11"
 bincode = "1.1.2"
 linked-hash-map = { version = "0.5.2", features = ["serde_impl"] }
 serde = { version = "1.0.91", features = ["derive"] }
