--- a/meilidb-data/Cargo.toml
+++ b/meilidb-data/Cargo.toml
@@ -5,10 +5,11 @@ authors = ["Kerollmops <renault.cle@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-arc-swap = "0.3.11"
+arc-swap = "0.4.2"
 bincode = "1.1.4"
 deunicode = "1.0.0"
 hashbrown = { version = "0.6.0", features = ["serde"] }
+log = "0.4.6"
 meilidb-core = { path = "../meilidb-core", version = "0.1.0" }
 meilidb-schema = { path = "../meilidb-schema", version = "0.1.0" }
 meilidb-tokenizer = { path = "../meilidb-tokenizer", version = "0.1.0" }
@@ -17,7 +18,7 @@ sdset = "0.3.2"
 serde = { version = "1.0.99", features = ["derive"] }
 serde_json = "1.0.40"
 siphasher = "0.3.0"
-rocksdb = { version = "0.12.3", default-features = false }
+sled = "0.25.0"
 zerocopy = "0.2.8"
 
 [dependencies.rmp-serde]
