--- a/meilidb-schema/Cargo.toml
+++ b/meilidb-schema/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 bincode = "1.1.2"
-linked-hash-map = { version = "0.5.2", features = ["serde_impl"] }
+indexmap = { version = "1.1.0", features = ["serde-1"] }
 serde = { version = "1.0.91", features = ["derive"] }
 serde_json = { version = "1.0.39", features = ["preserve_order"] }
 toml = { version = "0.5.0", features = ["preserve_order"] }
