--- a/meilidb-data/Cargo.toml
+++ b/meilidb-data/Cargo.toml
@@ -14,11 +14,11 @@ meilidb-core = { path = "../meilidb-core", version = "0.1.0" }
 meilidb-schema = { path = "../meilidb-schema", version = "0.1.0" }
 meilidb-tokenizer = { path = "../meilidb-tokenizer", version = "0.1.0" }
 ordered-float = { version = "1.0.2", features = ["serde"] }
+rocksdb = "0.12.3"
 sdset = "0.3.2"
 serde = { version = "1.0.99", features = ["derive"] }
 serde_json = "1.0.40"
 siphasher = "0.3.0"
-sled = "0.26.0"
 zerocopy = "0.2.8"
 
 [dependencies.rmp-serde]
