--- a/meilidb-data/Cargo.toml
+++ b/meilidb-data/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 arc-swap = "0.4.2"
 bincode = "1.1.4"
+crossbeam-channel = "0.3.9"
 deunicode = "1.0.0"
 hashbrown = { version = "0.6.0", features = ["serde"] }
 log = "0.4.6"
