--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,41 +1,7 @@
-[package]
-name = "new-meilidb"
-version = "0.1.0"
-authors = ["Clément Renault <clement@meilisearch.com>"]
-edition = "2018"
+[workspace]
+members = [
+    "meilidb-core",
+]
 
-[dependencies]
-bincode = "1.1.4"
-byteorder = "1.3.2"
-deunicode = "1.0.0"
-hashbrown = { version = "0.6.0", features = ["serde"] }
-once_cell = "1.2.0"
-ordered-float = { version = "1.0.2", features = ["serde"] }
-rkv = "0.10.2"
-sdset = "0.3.2"
-serde = { version = "1.0.99", features = ["derive"] }
-serde_json = "1.0.40"
-siphasher = "0.3.0"
-slice-group-by = "0.2.6"
-zerocopy = "0.2.8"
-
-meilidb-schema = { path = "../MeiliDB/meilidb-schema", version = "0.1.0" }
-meilidb-tokenizer = { path = "../MeiliDB/meilidb-tokenizer", version = "0.1.0" }
-
-[dependencies.rmp-serde]
-git = "https://github.com/3Hren/msgpack-rust.git"
-rev = "40b3d48"
-
-[dependencies.rmpv]
-git = "https://github.com/3Hren/msgpack-rust.git"
-rev = "40b3d48"
-features = ["with-serde"]
-
-[dependencies.levenshtein_automata]
-git = "https://github.com/Kerollmops/levenshtein-automata.git"
-branch = "arc-byte-slice"
-features = ["fst_automaton"]
-
-[dependencies.fst]
-git = "https://github.com/Kerollmops/fst.git"
-branch = "arc-byte-slice"
+[profile.release]
+debug = true
