--- a/meilidb-core/Cargo.toml
+++ b/meilidb-core/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2018"
 [dependencies]
 bincode = "1.1.4"
 byteorder = "1.3.2"
+crossbeam-channel = "0.3.9"
 deunicode = "1.0.0"
+env_logger = "0.7.0"
 hashbrown = { version = "0.6.0", features = ["serde"] }
+log = "0.4.8"
 meilidb-schema = { path = "../meilidb-schema", version = "0.1.0" }
 meilidb-tokenizer = { path = "../meilidb-tokenizer", version = "0.1.0" }
 once_cell = "1.2.0"
