--- a/meilidb-core/Cargo.toml
+++ b/meilidb-core/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Clément Renault <clement@meilisearch.com>"]
 edition = "2018"
 
 [dependencies]
+arc-swap = "0.4.3"
 bincode = "1.1.4"
 byteorder = "1.3.2"
 crossbeam-channel = "0.3.9"
