--- a/meilidb-core/Cargo.toml
+++ b/meilidb-core/Cargo.toml
@@ -47,6 +47,7 @@ branch = "arc-byte-slice"
 [dev-dependencies]
 assert_matches = "1.3"
 csv = "1.0.7"
+indexmap = { version = "1.2.0", features = ["serde-1"] }
 rustyline = { version = "5.0.0", default-features = false }
 structopt = "0.3.2"
 tempfile = "3.1.0"
