--- a/.github/workflows/publish-binaries.yml
+++ b/.github/workflows/publish-binaries.yml
@@ -8,14 +8,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         include:
           - os: ubuntu-latest
             artifact_name: meilidb-http
             asset_name: meilidb-http-linux-amd64
-          - os: windows-latest
-            artifact_name: meilidb-http.exe
-            asset_name: meilidb-http-windows-amd64
           - os: macos-latest
             artifact_name: meilidb-http
             asset_name: meilidb-http-macos-amd64
