--- a/meilisearch-raft/Cargo.toml
+++ b/meilisearch-raft/Cargo.toml
@@ -8,20 +8,26 @@ edition = "2018"
 bytes = "0.4"
 env_logger = "0.7.0"
 futures = "0.1.29"
-grpcio = { version = "0.4.5", features = [ "secure" ] }
+# grpcio = { version = "0.4.5", features = [ "secure" ] }
 log = "0.4.8"
 logger = "0.4.0"
-protobuf = "2.8.0"
+# protobuf = "2.8.0"
 rand = "0.7.2"
 serde = { version = "1.0.103", features = ["derive"] }
 serde_json = "1.0.42"
 slog = "2.5.2"
 slog-stdlog = "4.0.0"
+prost = "0.5.0"
 
 [dependencies.raft]
 git = "https://github.com/tikv/raft-rs"
 branch = "master"
+default-features = false
+features = ["prost-codec", "default-logger"]
 
 [dev-dependencies]
 rustyline = "5.0.5"
 structopt = "0.3.5"
+
+[build-dependencies]
+prost-build = "0.5.0"
