--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -47,6 +47,7 @@ actix-cors = "0.2.0"
 actix-service = "1.0.5"
 actix-web-macros = "0.1.0"
 tokio = { version = "0.2.18", features = ["macros"] }
+sentry = { version = "0.18.0", features = ["with_rustls", "with_env_logger"] }
 
 [dev-dependencies]
 http-service = "0.4.0"
