rename identifier into primaryKey; fix #514

--- a/datasets/movies/settings.json
+++ b/datasets/movies/settings.json
@@ -1,5 +1,5 @@
 {
-    "identifier": "id",
+    "primaryKey": "id",
     "searchableAttributes": ["title", "overview"],
     "displayedAttributes": [
         "id",
