Mark the Changelog CI job as non-fatal

--- a/.github/workflows/check-updated-changelog.yml
+++ b/.github/workflows/check-updated-changelog.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Checking the CHANGELOG.md has been updated in this PR
+      continue-on-error: true
       run: |
         set -e
         git fetch origin ${{ github.base_ref }}
