--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ fst = "0.4.3"
 fxhash = "0.2.1"
 jemallocator = "0.3.2"
 rayon = "1.3.0"
+rocksdb = "0.14.0"
 sdset = "0.4.0"
-sled = { git = "https://github.com/spacejam/sled.git", rev = "2fe05c9"}
 slice-group-by = "0.2.6"
 smallstr = "0.2.0"
 structopt = { version = "0.3.14", default-features = false }
