--- a/meilisearch-core/Cargo.toml
+++ b/meilisearch-core/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 [dependencies]
 arc-swap = "0.4.5"
 bincode = "1.2.1"
+bitpacking = "0.8.2"
 byteorder = "1.3.4"
 chrono = { version = "0.4.11", features = ["serde"] }
 compact_arena = "0.4.0"
