--- a/meilisearch-core/Cargo.toml
+++ b/meilisearch-core/Cargo.toml
@@ -32,6 +32,7 @@ once_cell = "1.3.1"
 ordered-float = { version = "1.0.2", features = ["serde"] }
 pest = { git = "https://github.com/MarinPostma/pest.git", tag = "meilisearch-patch1" }
 pest_derive = "2.0"
+quickcheck = "0.9.2"
 regex = "1.3.6"
 sdset = "0.4.0"
 serde = { version = "1.0.105", features = ["derive"] }
