--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,20 +8,17 @@ edition = "2018"
 anyhow = "1.0.28"
 bitpacking = "0.8.2"
 byteorder = "1.3.4"
+roaring = "0.5.2"
+crossbeam-channel = "0.4.2"
 csv = "1.1.3"
 fst = "0.4.3"
 fxhash = "0.2.1"
+heed = { version = "0.8.0", default-features = false, features = ["lmdb"] }
 jemallocator = "0.3.2"
 rayon = "1.3.0"
-rocksdb = "0.14.0"
-sdset = "0.4.0"
 slice-group-by = "0.2.6"
 smallstr = "0.2.0"
 structopt = { version = "0.3.14", default-features = false }
-zerocopy = "0.3.0"
-
-[dev-dependencies]
-quickcheck = "0.9.2"
 
 [profile.release]
 debug = true
